--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -5,7 +5,7 @@ body {
     background: #010312;
     color: #ed680b;
     min-height: 100vh;  
-    position: relative;
+    display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
@@ -197,6 +197,18 @@ footer {
     .join-logos img {
         width: 45px;
         height: auto;
+    }
+
+    footer {
+        background-color: #010312;
+        color: #ffa500;
+        text-align: center;
+        padding: 10px;
+        width: 100%;
+        height: 50px;
+        position: relative;
+        margin-top: auto;  /* Push footer to the bottom */
+        box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
     }
 }
 
