--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -206,7 +206,7 @@ footer {
         padding: 10px;
         width: 100%;
         height: 50px;
-        position: relative;
+        display: flex;
         margin-top: auto;  /* Push footer to the bottom */
         box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
     }
