--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -190,13 +190,14 @@ footer {
     }
 
     #join img.logo {
-        width: 145px;
+        width: 135px;
         height: auto;
     }
 
     .join-logos img {
-        width: 45px;
+        width: 40px;
         height: auto;
+        margin-bottom: 0;
     }
 
     footer {
@@ -205,10 +206,11 @@ footer {
         text-align: center;
         padding: 10px;
         width: 100%;
-        height: 50px;
-        display: flex;
-        margin-top: auto;  /* Push footer to the bottom */
+        height: 45px;
+        position: relative;
+        margin-top: 0;  /* Push footer to the bottom */
         box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
+        font-size: 12px;
     }
 }
 
